--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ serde_json = "1.0.108"
 rmp-serde = "1.1.2"
 serde = { version = "1.0.193", features = ["derive"] }
 dashmap = "5.5.3"
+strum = "0.26.3"
+strum_macros = "0.26.4"
