--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ strum = "0.26.3"
 strum_macros = "0.26.4"
 moka = { version = "0.12.7", features = ["sync"] }
 rocksdb = "0.22.0"
+once_cell = "1.19.0"
