--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ strum_macros = "0.26.4"
 moka = { version = "0.12.7", features = ["sync"] }
 rocksdb = "0.22.0"
 once_cell = "1.19.0"
+chrono = "0.4.38"
