--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,6 @@ once_cell = "1.19.0"
 chrono = "0.4.38"
 file-lock = "2.1.11"
 ring = "0.17.8"
+tokio = { version = "1.38.1", features = ["full"] }
+tokio-macros = "2.3.0"
+tokio-stream = "0.1.15"
