--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,19 +6,18 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde_json = "1.0.108"
-rmp-serde = "1.1.2"
-serde = { version = "1.0.193", features = ["derive"] }
-dashmap = "5.5.3"
-strum = "0.26.3"
-strum_macros = "0.26.4"
-moka = { version = "0.12.7", features = ["sync"] }
-rocksdb = "0.22.0"
-once_cell = "1.19.0"
-chrono = "0.4.38"
+serde_json = "1.0.140"
+rmp-serde = "1.3.0"
+serde = { version = "1.0.219", features = ["derive"] }
+dashmap = "7.0.0-rc0"
+strum = "0.27.1"
+strum_macros = "0.27.1"
+moka = { version = "0.12.10", features = ["sync"] }
+once_cell = "1.21.3"
+chrono = "0.4.41"
 file-lock = "2.1.11"
-ring = "0.17.8"
-tokio = { version = "1.38.1", features = ["full"] }
-tokio-macros = "2.3.0"
-tokio-stream = "0.1.15"
-async-trait = "0.1.81"
+ring = "0.17.14"
+tokio = { version = "1.44.2", features = ["full"] }
+tokio-macros = "2.5.0"
+tokio-stream = "0.1.17"
+async-trait = "0.1.88"
