--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,6 @@ tokio = { version = "1.44.2", features = ["full"] }
 tokio-macros = "2.5.0"
 tokio-stream = "0.1.17"
 async-trait = "0.1.88"
+
+[dev-dependencies]
+tempfile = "3.20.0"
